@@ -1,3 +1,8 @@
+2005-01-18 Hasso Tepper <hasso at quagga.net>
+
+	* interface.c: Better statistics output in "show interface" command in
+	  case of /proc being used.
+
 2005-01-17 Hasso Tepper <hasso at quagga.net>
 
 	* main.c: With --nl-bufsize argument is required.
